--- a/spendit.css
+++ b/spendit.css
@@ -55,7 +55,7 @@
      rgba(104, 113, 120, 1) 0%,
      rgba(83, 90, 95, 1) 100%
    );
-   color: rgb(150, 150, 150);
+   color: white;
    display: flex;
    text-align: center;
    align-items: center;
