--- a/spendit.css
+++ b/spendit.css
@@ -95,7 +95,7 @@
      rgba(104, 113, 120, 1) 0%,
      rgba(83, 90, 95, 1) 100%
    );
-   color: white;
+   color: rgb(126, 126, 126);
    border-radius: 5px;
    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
      rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
