--- a/spendit.css
+++ b/spendit.css
@@ -92,10 +92,10 @@
    text-align: center;
    background: linear-gradient(
      0deg,
-     rgba(104, 113, 120, 1) 0%,
-     rgba(83, 90, 95, 1) 100%
+     rgb(59, 61, 63) 0%,
+     rgb(34, 35, 36) 100%
    );
-   color: rgb(126, 126, 126);
+   color: white;
    border-radius: 5px;
    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
      rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
