--- a/spendit.css
+++ b/spendit.css
@@ -136,19 +136,19 @@
  }
  
  .btn-buy {
-   background-color: rgb(158, 221, 153);
+   background-color: rgb(98, 192, 91)
  }
  
  .btn-sell {
-   background-color: rgb(221, 153, 153);
+   background-color: rgb(255, 141, 141);
  }
  
  .btn-sell:hover {
-   background-color: rgb(253, 201, 192);
+   background-color: rgb(255, 177, 163);
  }
  
  .btn-buy:hover {
-   background-color: rgb(204, 252, 200);
+   background-color: rgb(165, 240, 158);
  }
  
  .receipt {
